--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -235,7 +235,7 @@ jobs:
       - name: Add make name
         run: |
          cd kernel_workspace/kernel_platform
-         sudo :> scripts/setlocalversion
+         sudo :> ./scripts/setlocalversion
          sudo echo "echo "${{ github.event.inputs.KERNEL_SUFFIX }}"" >> ./scripts/setlocalversion
 
       - name: Add sched_ext
