--- a/.github/workflows/oneplus_ace5_pro.yml
+++ b/.github/workflows/oneplus_ace5_pro.yml
@@ -235,9 +235,9 @@ jobs:
       - name: Add make name
         run: |
          cd kernel_workspace/kernel_platform/common/scripts
-         echo | sudo tee setlocalversion
-         sudo echo "echo "${{ github.event.inputs.KERNEL_SUFFIX }}"" >> setlocalversion
-
+         sed -i 's/res="\$res\$(cat "\$file")"/res="-android15-8-g013ec21bba94-abogki383916444"/g' ./common/scripts/setlocalversion
+         sudo sed -i 's/-4k/${{ github.event.inputs.KERNEL_SUFFIX }}/g' ./common/arch/arm64/configs/gki_defconfig
+         
       - name: Add sched_ext
         if: ${{inputs.enable_feature_z }}
         run: |
