--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -234,8 +234,8 @@ jobs:
           
       - name: Add make name
         run: |
-         cd kernel_workspace/kernel_platform/common
-         sudo echo | sudo tee setlocalversion
+         cd kernel_workspace/kernel_platform/common/scripts
+         echo | sudo tee setlocalversion
          sudo echo "echo "${{ github.event.inputs.KERNEL_SUFFIX }}"" >> setlocalversion
 
       - name: Add sched_ext
