--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -233,9 +233,9 @@ jobs:
           
       - name: Add make name
         run: |
-         cd kernel_workspace/kernel_platform/common/scripts
-         echo | sudo tee setlocalversion
-         sudo echo "echo "${{ github.event.inputs.KERNEL_SUFFIX }}"" >> setlocalversion
+         cd kernel_workspace/kernel_platform
+         sudo sed -i 's/-dirty//' ./common/scripts/setlocalversion
+         sudo sed -i 's/-4k/${{ github.event.inputs.KERNEL_SUFFIX }}/g' ./common/arch/arm64/configs/gki_defconfig
 
       - name: Add sched_ext
         if: ${{inputs.enable_feature_z }}
