--- a/.github/workflows/oneplus_ace5_pro.yml
+++ b/.github/workflows/oneplus_ace5_pro.yml
@@ -299,5 +299,5 @@ jobs:
       - name: Upload AnyKernel3
         uses: actions/upload-artifact@v4
         with:
-         name: SuKiSu_${{ env.KSUVER }}_oneplus_13
+         name: SuKiSu_${{ env.KSUVER }}_oneplus_ace5_pro
          path: ./AnyKernel3/*
