更新 oneplus_13.yml

--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -271,6 +271,32 @@ jobs:
          sed -i 's/${scm_version}//' ./common/scripts/setlocalversion
          sudo sed -i 's/-4k/${{ github.event.inputs.KERNEL_SUFFIX }}/g' ./common/arch/arm64/configs/gki_defconfig
 
+      - name: Find and save all setlocalversion files
+        run: |
+          mkdir -p saved_setlocalversion
+
+          echo "::group::Searching for all setlocalversion files..."
+          find . -type f -name setlocalversion | while read -r path; do
+            echo "Found: $path"
+            sanitized_name=$(echo "$path" | sed 's|^\./||; s|/|_|g')
+            cp "$path" "saved_setlocalversion/${sanitized_name}"
+          done
+          echo "::endgroup::"
+
+          echo "::group::Preview saved setlocalversion content"
+          for f in saved_setlocalversion/*; do
+            echo "====== $f ======"
+            head -n 10 "$f"
+            echo "..."
+          done
+          echo "::endgroup::"
+
+      - name: Upload setlocalversion files
+        uses: actions/upload-artifact@v4
+        with:
+          name: setlocalversion-debug
+          path: saved_setlocalversion
+
       - name: Add sched_ext
         if: ${{inputs.enable_feature_z }}
         run: |
