更新 oneplus_13.yml

--- a/.github/workflows/oneplus_13.yml
+++ b/.github/workflows/oneplus_13.yml
@@ -25,7 +25,7 @@ on:
        required: false
        default: false
        type: boolean
-       
+
 
 
 jobs:
@@ -47,7 +47,7 @@ jobs:
           remove-android: 'true'
           remove-haskell: 'true'
           remove-codeql: 'true'
-          
+
       - name: Configure Git
         run: |
          git config --global user.name "Futaba"
@@ -84,14 +84,14 @@ jobs:
       - name: Set up SukiSU
         run: |
          cd kernel_workspace/kernel_platform
-         curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/susfs-1.5.8/kernel/setup.sh" | bash -s susfs-1.5.8
+         curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
          cd ./KernelSU
-         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count main) "+" 10606)
+         KSU_VERSION=$(expr $(/usr/bin/git rev-list --count main) "+" 10700)
          echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
          export KSU_VERSION=$KSU_VERSION
          sed -i "s/DKSU_VERSION=12800/DKSU_VERSION=${KSU_VERSION}/" kernel/Makefile
       
-        
+
       - name: Set up susfs
         run: |
            cd kernel_workspace
@@ -219,7 +219,7 @@ jobs:
           # Add SUSFS configuration settings
           echo "CONFIG_KSU_SUSFS=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
-          echo "CONFIG_KSU_SUSFS_SUS_PATH=n" >> ./common/arch/arm64/configs/gki_defconfig
+          echo "CONFIG_KSU_SUSFS_SUS_PATH=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_SUS_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
           echo "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y" >> ./common/arch/arm64/configs/gki_defconfig
@@ -270,32 +270,6 @@ jobs:
          cd kernel_workspace/kernel_platform
          sed -i 's/${scm_version}//' ./common/scripts/setlocalversion
          sudo sed -i 's/-4k/${{ github.event.inputs.KERNEL_SUFFIX }}/g' ./common/arch/arm64/configs/gki_defconfig
-
-      - name: Find and save all setlocalversion files
-        run: |
-          mkdir -p saved_setlocalversion
-
-          echo "::group::Searching for all setlocalversion files..."
-          find . -type f -name setlocalversion | while read -r path; do
-            echo "Found: $path"
-            sanitized_name=$(echo "$path" | sed 's|^\./||; s|/|_|g')
-            cp "$path" "saved_setlocalversion/${sanitized_name}"
-          done
-          echo "::endgroup::"
-
-          echo "::group::Preview saved setlocalversion content"
-          for f in saved_setlocalversion/*; do
-            echo "====== $f ======"
-            head -n 10 "$f"
-            echo "..."
-          done
-          echo "::endgroup::"
-
-      - name: Upload setlocalversion files
-        uses: actions/upload-artifact@v4
-        with:
-          name: setlocalversion-debug
-          path: saved_setlocalversion
 
       - name: Add sched_ext
         if: ${{inputs.enable_feature_z }}
